// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders default 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <p
        className="text-secondary text-center mb-0"
      >
        No hay comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders listing one 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        1 comentario
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Connect(Comment)
        id="foo"
        key="foo"
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-secondary mb-0"
      >
        No hay más comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders listing two 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        2 comentarios
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Connect(Comment)
        id="foo"
        key="foo"
      />
      <Connect(Comment)
        id="bar"
        key="bar"
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-secondary mb-0"
      >
        No hay más comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders listing two and load more 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        2 comentarios
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Connect(Comment)
        id="foo"
        key="foo"
      />
      <Connect(Comment)
        id="bar"
        key="bar"
      />
    </div>
    <div
      className="card-body text-center"
    >
      <i
        className="fa fa-circle-notch fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`Comments renders with error 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        1 comentario
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Connect(Comment)
        id="foo"
        key="foo"
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-danger"
      >
        ¡Ratas! Algo salío mal. Refresca la página o haz clic sobre el siguiente botón.
      </p>
      <p
        className="my-0"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          onClick={[Function]}
        >
          Volver a intentar
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders with initial error 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body text-center"
    >
      <p
        className="text-danger"
      >
        ¡Ratas! Algo salío mal. Refresca la página o haz clic sobre el siguiente botón.
      </p>
      <p
        className="my-0"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          onClick={[Function]}
        >
          Volver a intentar
        </button>
      </p>
    </div>
  </div>
</div>
`;
